# flask-atemplates

./: .env.bak  .gitignore  README.md  pyproject.toml
src/server/: __init__.py  checksign.py  config.py  deleter.py  main.py  model.py
src/server/static/downloads/: Hello.html
src/server/static/signature/: createsign.py
src/server/templates/: base.html  index.html
tests/: test_atemplates.py
